loging and registration

--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -1,4 +1,9 @@
-﻿@inherits LayoutComponentBase
+﻿@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Identity
+
+@inherits LayoutComponentBase
+@inject SignInManager<IdentityUser> SignInManager
+@inject AuthenticationStateProvider AuthenticationStateProvider
 
 <div class="page">
     <div class="sidebar">
@@ -7,6 +12,15 @@
 
     <main>
         <div class="top-row px-4">
+            @if (isAuthenticated)
+            {
+                <a href="/logout">Logout</a>
+            }
+            else
+            {
+                <a href="/login">Login</a>
+                <a href="/register">Register</a>
+            }
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
         </div>
 
@@ -21,3 +35,18 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+
+@code {
+    [CascadingParameter]
+    public Task<AuthenticationState> AuthenticationStateTask { get; set; }
+
+    private bool isAuthenticated = false;
+    protected override async Task OnInitializedAsync()
+    {
+        var authState = await AuthenticationStateTask;
+        var user = authState.User;
+
+        // Check if the user is authenticated
+        isAuthenticated = user.Identity.IsAuthenticated;
+    }
+}
